--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -35,7 +35,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - run: echo "VERSION=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
+    - run: echo "VERSION=$(git describe --tags --abbrev=0)-$(git rev-parse --shot HEAD)" >> $GITHUB_ENV
 
     - uses: mikefarah/yq@master
       with:
